--- a/packages/contracts/evm-contracts/docs/templates/page.hbs
+++ b/packages/contracts/evm-contracts/docs/templates/page.hbs
@@ -1,4 +1,5 @@
-:github-icon: pass:[<svg class="icon"><use href="#github-icon"/></svg>]
+import FunctionBlock from '@site/src/components/FunctionBlock';
+
 {{#with-prelude}}
 {{readme (readme-path)}}
 {{/with-prelude}}
