Implement remaining Solidity doc elements

--- a/packages/contracts/evm-contracts/docs/templates/page.hbs
+++ b/packages/contracts/evm-contracts/docs/templates/page.hbs
@@ -1,4 +1,6 @@
-import FunctionBlock from '@site/src/components/FunctionBlock';
+import SolidityDetailBlock from '@site/src/components/SolidityDetailBlock';
+import SolidityOutlineBlock from '@site/src/components/SolidityOutlineBlock';
+import ContractHeader from '@site/src/components/ContractHeader';
 
 {{#with-prelude}}
 {{readme (readme-path)}}
