--- a/packages/contracts/evm-contracts/docs/templates/contract.hbs
+++ b/packages/contracts/evm-contracts/docs/templates/contract.hbs
@@ -1,4 +1,6 @@
-### `{{name}}` [![Github link](https://github.githubassets.com/favicons/favicon-dark.png)](https://github.com/PaimaStudios/paima-engine/tree/master/packages/evm-contracts/{{__item_context.file.absolutePath}}) {#{{~anchor~}} }
+<ContractHeader githubLink="https://github.com/PaimaStudios/paima-engine/tree/master/packages/evm-contracts/{{__item_context.file.absolutePath}}" anchor="{{~anchor~}}">
+    ### {{name}}
+</ContractHeader>
 
 ```solidity
 import "@paima/evm-contracts/{{__item_context.file.absolutePath}}";
@@ -7,103 +9,136 @@ import "@paima/evm-contracts/{{__item_context.file.absolutePath}}";
 {{{natspec.dev}}}
 
 {{#if modifiers}}
-#### Modifiers
-
-{{#each modifiers}}
-* [`{{name}}({{names params}})`](#xref-{{anchor~}})
-{{/each}}
-
+<SolidityOutlineBlock
+  type="Modifiers"
+  lists={[
+    {
+      category: "",
+      lines: [
+        {{#each modifiers}}
+        {
+          text: "{{name}}({{names params}})",
+          anchor: "xref-{{anchor~}}"
+        },
+        {{/each}}
+      ]
+    }
+  ]}
+>
+</SolidityOutlineBlock>
 {{/if}}
 
 {{#if has-functions}}
-#### Functions
-
-{{#each inherited-functions}}
-{{#unless @first}}
-##### From {{contract.name}}
-{{/unless}}
-{{#each functions}}
-* [`{{name}}({{names params}})`](#xref-{{anchor~}})
-{{/each}}
-
-{{/each}}
-
+<SolidityOutlineBlock
+  type="Functions"
+  lists={[
+    {{#each inherited-functions}}
+    {
+      category: "{{#unless @first}}{{contract.name}}{{/unless}}",
+      lines: [
+        {{#each functions}}
+        {
+          text: "{{name}}({{names params}})",
+          anchor: "xref-{{anchor~}}"
+        },
+        {{/each}}
+      ]
+    },
+    {{/each}}
+  ]}
+>
+</SolidityOutlineBlock>
 {{/if}}
 
 {{#if has-events}}
-#### Events
-
-{{#each inheritance}}
-{{#unless @first}}
-##### From {{name}}
-{{/unless}}
-{{#each events}}
-* [`{{name}}({{names params}})`](#xref-{{anchor~}})
-{{/each}}
-
-{{/each}}
-
+<SolidityOutlineBlock
+  type="Events"
+  lists={[
+    {{#each inheritance}}
+    {
+      category: "{{#unless @first}}{{name}}{{/unless}}",
+      lines: [
+        {{#each events}}
+        {
+          text: "{{name}}({{names params}})",
+          anchor: "xref-{{anchor~}}"
+        },
+        {{/each}}
+      ]
+    },
+    {{/each}}
+  ]}
+>
+</SolidityOutlineBlock>
 {{/if}}
 
 {{#if has-errors}}
-#### Errors
-
-{{#each inheritance}}
-{{#unless @first}}
-##### From {{name}}
-{{/unless}}
-{{#each errors}}
-* [`{{name}}({{names params}})`](#xref-{{anchor~}})
-{{/each}}
-
-{{/each}}
-
+<SolidityOutlineBlock
+  type="Errors"
+  lists={[
+    {{#each inheritance}}
+    {
+      category: "{{#unless @first}}{{name}}{{/unless}}",
+      lines: [
+        {{#each errors}}
+        {
+          text: "{{name}}({{names params}})",
+          anchor: "xref-{{anchor~}}"
+        },
+        {{/each}}
+      ]
+    },
+    {{/each}}
+  ]}
+>
+</SolidityOutlineBlock>
 {{/if}}
 
+
 {{#each modifiers}}
-<FunctionBlock
+<SolidityDetailBlock
     title="{{name}}"
     params="({{typed-params params}})"
     visibility="modifier"
     anchor="xref-{{anchor}}"
 >
     {{{escapeChars natspec.dev}}}
-</FunctionBlock>
+</SolidityDetailBlock>
 
 {{/each}}
 
 {{#each functions}}
-<FunctionBlock
+<SolidityDetailBlock
     title="{{name}}"
     params="({{typed-params params}}){{#if returns2}} → {{typed-params returns2}}{{/if}}"
     visibility="{{visibility}}"
     anchor="xref-{{anchor}}"
 >
     {{{escapeChars natspec.dev}}}
-</FunctionBlock>
+</SolidityDetailBlock>
 
 {{/each}}
 
 {{#each events}}
-<FunctionBlock
+<SolidityDetailBlock
     title="{{name}}"
     params="({{typed-params params}})"
     visibility="event"
     anchor="xref-{{anchor}}"
 >
     {{{escapeChars natspec.dev}}}
-</FunctionBlock>
+</SolidityDetailBlock>
 
 {{/each}}
 
 {{#each errors}}
-<FunctionBlock
+<SolidityDetailBlock
     title="{{name}}"
     params="({{typed-params params}})"
     visibility="error"
     anchor="xref-{{anchor}}"
 >
     {{{escapeChars natspec.dev}}}
-</FunctionBlock>
+</SolidityDetailBlock>
 
 {{/each}}
